Trying to get src folder back up; edited gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ pOdometry/
 README
 scripts/
 src/CMakeLists.txt
-src/lib_behaviors-test
-src/pExampleApp
-src/pXRelayTest
+src/lib_behaviors-test/
+src/pExampleApp/
+src/pXRelayTest/
 .DS_Store
