added exception for src gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ data/
 pOdometry/
 README
 scripts/
-#src/CMakeLists.txt
-#src/lib_behaviors-test/
-#src/pExampleApp/
-#src/pXRelayTest/
+src/
+!src/pOdometry/
 .DS_Store
